--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,16 @@
  *= require_self
  */
 @import "bootstrap";
+
+.system_background {
+  background-color: #78002e;
+  color: white;
+  text-align: center;
+}
+
+.center_align {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
